--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -10,7 +10,7 @@
         <% if (errorMessage) { %>
             <div class="user-message user-message--error"><%= errorMessage %></div>
         <% } %>
-        <form class="login-form" action="/login" method="POST" novalidate>
+        <form class="login-form" action="/login" method="POST">
             <div class="form-control">
                 <label for="email">E-Mail</label>
                 <input 
@@ -32,7 +32,7 @@
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <button class="btn" type="submit">Login</button>
         </form>
-        <div class="centered">
+        <div class="login-form">
             <a href="/reset" class="btn">Reset Password</a>
         </div>
     </main>
