--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -32,7 +32,7 @@
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <button class="btn" type="submit">Login</button>
         </form>
-        <div class="login-form">
+        <div class="resetPassword">
             <a href="/reset" class="btn">Reset Password</a>
         </div>
     </main>
