--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -15,6 +15,7 @@
   border: 1px solid #a1a1a1;
   font: inherit;
   border-radius: 2px;
+  background-color: rgb(224, 224, 224);
 }
 
 .form-control input:focus,
