--- a/public/css/main.css
+++ b/public/css/main.css
@@ -48,6 +48,19 @@ form {
   align-items: center;
 }
 
+.main-footer {
+  bottom: 0;
+  position: fixed;
+  width: 100%;
+  height: 3.5rem;
+  background-color: rgb(100, 150, 100);
+  padding: 0 1.5rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
 .main-header__nav {
   height: 100%;
   width: 100%;
